load("@npm//:react-scripts/package_json.bzl", cra_bin = "bin")

filegroup(
    name = "static_files",
    srcs = glob(
        [
            "public/*",
            "src/**/*",
        ],
    ) + [
        "//:package_json",
        "tsconfig.json",
        "package.json",
    ],
)

_RUNTIME_DEPS = [
    "static_files",
    "//:node_modules/react",
    "//:node_modules/react-dom",
]

cra_bin.react_scripts(
    # Note: If you want to change the name make sure you update BUILD_PATH below accordingly
    # https://create-react-app.dev/docs/advanced-configuration/
    name = "build",
    srcs = _RUNTIME_DEPS + [
        "//:node_modules/@types/react",
        "//:node_modules/@types/react-dom",
        "//:node_modules/react-scripts",
        "//:node_modules/typescript",
        "//:node_modules/web-vitals",
    ],
    args = ["build"],
    chdir = package_name(),
    env = {
        "BUILD_PATH": "./build",
    },
    out_dirs = ["build"],
)
