load("@aspect_rules_ts//ts:defs.bzl", "ts_project")

ts_project(
    name = "components",
    srcs = glob([
        "*.tsx",
        "*.css",
    ]),
    declaration = True,
    supports_workers = False,
    tsconfig = "//:tsconfig",
    deps = [
        "//:node_modules/react",
        "//:node_modules/react-dom",
    ],
)
